--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.72",
+    "@ai-sdk/react": "^2.0.101",
     "@floating-ui/react": "^0.27.16",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -84,12 +86,14 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "ai": "^5.0.101",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
+    "drizzle-seed": "^0.3.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "install": "^0.13.0",
