--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "name": "supervisee",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
   "description": "Supervisee by Praxiss: Professional supervision and compliance platform for clinicians.",
   "author": "Praxiss",
   "scripts": {
@@ -74,7 +70,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.553.0",
     "nanoid": "^5.1.6",
-    "next": "^15.2.3",
+    "next": "15.5.9",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
